# rust2go

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  go.mod  go.work  go.work.sum
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
asmcall/: README.md  README_ZH.md  amd64.go  amd64.s  arm64.go  arm64.s  fallback.go
asmcall/bench/: bench.go  bench_test.go
cgocall/: call.go
docs/: cli-args.md  trait-attrs.md
example/: Cargo.toml  README.md  build.rs
example/benches/: r2r_vs_r2g.rs
example/go/: gen.go  go.mod  impl.go
example/src/: main.rs  user.rs
examples/: README.md
examples/example-bidirectional/: Cargo.toml  README.md
examples/example-bidirectional/go/: gen.go  go.mod  impl.go
examples/example-bidirectional/src/: main.rs  user.rs
examples/example-go2rust/: README.md  build_static.sh  gen.go  go.mod  main.go
examples/example-go2rust/rust-lib/: Cargo.toml
examples/example-go2rust/rust-lib/src/: lib.rs  user.rs
examples/example-monoio/: Cargo.toml  README.md  build.rs
examples/example-monoio-mem/: Cargo.toml  README.md  build.rs
examples/example-monoio-mem/go/: gen.go  go.mod
examples/example-monoio-mem/src/: main.rs  user.rs
examples/example-monoio/go/: gen.go  go.mod  impl.go
examples/example-monoio/src/: main.rs  user.rs
examples/example-tokio/: Cargo.toml  README.md
examples/example-tokio-mem/: Cargo.toml  README.md  build.rs
examples/example-tokio-mem/go/: gen.go  go.mod  go.sum
examples/example-tokio-mem/src/: main.rs  user.rs
examples/example-tokio-musl/: Cargo.toml  README.md  build.rs
examples/example-tokio-musl/go/: gen.go  go.mod  go.sum
examples/example-tokio-musl/src/: main.rs
examples/example-tokio/go/: gen.go  go.mod  impl.go
examples/example-tokio/src/: main.rs
mem-ring/: Cargo.toml  README.md  eventfd.go  queue.go  slab.go  waiter.go
mem-ring/src/: eventfd.rs  lib.rs  queue.rs  util.rs
rust2go/: Cargo.toml
rust2go-cli/: Cargo.toml  output.go
rust2go-cli/src/: lib.rs  main.rs
rust2go-common/: Cargo.toml
rust2go-common/src/: common.rs  g2r.rs  lib.rs  r2g.rs  raw_file.rs
rust2go-convert/: Cargo.toml
rust2go-convert/src/: convert.rs  lib.rs
rust2go-macro/: Cargo.toml
rust2go-macro/src/: lib.rs
rust2go-mem-ffi/: Cargo.toml
rust2go-mem-ffi/src/: future.rs  lib.rs  utils.rs
rust2go/src/: build.rs  convert.rs  future.rs  lib.rs  raw_file.rs  slot.rs
scripts/: update-version.sh
test/: Cargo.toml  README.md  build.rs
test/go/: gen.go  go.mod  impl.go  impl_test.go
test/src/: lib.rs  main.rs  user.rs
