[workspace]
members = [
    "rust2go",
    "rust2go-cli",
    "rust2go-macro",
    "rust2go-common",
    "rust2go-mem-ffi",
    "rust2go-convert",
    "mem-ring",
    "examples/example-monoio",
    "examples/example-tokio",
    "examples/example-monoio-mem",
    "examples/example-tokio-mem",
    "test",
]
resolver = "2"

[workspace.package]
authors = ["ihciah <ihciah@gmail.com>"]
categories = ["development-tools::ffi", "external-ffi-bindings"]
description = "Calling go from Rust with FFI."
edition = "2021"
keywords = ["ffi", "golang", "go", "async"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ihciah/rust2go"

[workspace.dependencies]
monoio = { version = "0.2.3" }
