[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
rust2go = { path = "../rust2go" }
monoio = { version = "0.2", features = ["sync"] }

[build-dependencies]
rust2go = { path = "../rust2go", features = ["build"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
tokio = { version = "1", features = ["time", "rt-multi-thread"] }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "example"
build = "build.rs"
path = "src/main.rs"

[[bench]]
name = "r2r_vs_r2g"
harness = false
