[package]
name = "rust2go-cli"
version = "0.3.10"

description = "Rust2go commandline tool."

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rust2go-common = { version = "0.3.12", path = "../rust2go-common" }

clap = { version = "4", features = ["derive"] }
cbindgen = { version = "0.27", default-features = false }
itertools = { version = "0.13" }

[[bin]]
name = "rust2go-cli"
path = "src/main.rs"
