[package]
name = "rust2go-cli"
version = "0.4.1"

description = "Rust2go commandline tool."

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rust2go-common = { version = "0.4.0", path = "../rust2go-common" }

clap = { version = "4", features = ["derive"] }
cbindgen = { version = "0.29", default-features = false }
itertools = { version = "0.14" }

[[bin]]
name = "rust2go-cli"
path = "src/main.rs"
