[package]
name = "rust2go-common"
version = "0.3.3"

description = "Rust2go common library."

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = { version = "1" }
proc-macro2 = { version = "1" }
