[package]
name = "rust2go-macro"
version = "0.0.2"

description = "rust2go macro"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true


[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
