[package]
name = "rust2go-macro"
version = "0.2.0"

description = "Rust2go macro."

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true


[lib]
proc-macro = true

[dependencies]
rust2go-common = { version = "0.2.0", path = "../rust2go-common" }

proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2", features = ["full"] }
