[package]
name = "rust2go"
version = "0.2.0"

description = "Rust2go main shared library."

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rust2go-macro = { version = "0.2.0", path = "../rust2go-macro" }

bindgen = { version = "0.69", optional = true }
syn = { version = "2", features = ["full"], optional = true }

[features]
default = []
build = ["syn", "bindgen"]
