[package]
name = "example-bi"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
rust2go = { path = "../../rust2go" }

[build-dependencies]
rust2go = { path = "../../rust2go", features = ["build"] }

[[bin]]
name = "example-bi"
path = "src/main.rs"
