[package]
name = "example-monoio-mem"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
rust2go = { path = "../../rust2go" }
rust2go-mem-ffi = { path = "../../rust2go-mem-ffi" }

monoio = { workspace = true, features = ['sync'] }

[build-dependencies]
rust2go = { path = "../../rust2go", features = ["build"] }

[[bin]]
name = "example-monoio-mem"
path = "src/main.rs"
