[package]
name = "example-tokio"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
rust2go = { path = "../../rust2go" }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
rust2go = { path = "../../rust2go", features = ["build"] }

[[bin]]
name = "example-tokio-cgo"
path = "src/main.rs"
